2000-04-07  Chris Toshok  <toshok@laptoph.xtoph.org>

	* addressbook/backend/pas/pas-backend-file.c
	(pas_backend_file_process_get_book_view): correctly (well,
	untested) implement.
	(view_destroy): new function.

2000-04-06  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/demo/demo.c, addressbook/demo/addressbook-widget.c:
	Changed calls to e_cell_text_new to match new function signature.

2000-04-06  Miguel de Icaza  <miguel@gnu.org>

	* art/Makefile.am (images_DATA): Renamed from pixmaps to images. 

2000-04-05  Matt Loper  <matt@helixcode.com>

	* README: Added wombat.

2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text-test.c: Got rid of some runtime errors.
	Changed to "fixed" font so that it will work on everyone's
	machine.  Added a white background rectangle.  Made resizing the
	window resize the contained text item.  Changed to using affines
	(e_canvas_item_move_absolute) instead of "x" and "y" attributes.
	Set the text in the entries so that they match the original values
	of the displayed text object.

2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-minicard/e-minicard.c: Fixed some referencing and
	lifetime issues.

2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.c: Removed an unnecessary get_bounds call.

	(From a patch by Iain Holmes <ih@csd.abdn.ac.uk>)

	* widgets/e-text/e-text.c: Made tooltips look more like the
	underlying text.  Made tooltips show up more consistently.

2000-04-04  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/demo/Makefile.am, addressbook/demo/e-test-model.c,
	addressbook/demo/e-test-model.h: Changed this to backend to an
	ebook.

	* addressbook/backend/ebook/e-card-iterator.c,
	addressbook/backend/ebook/e-card-iterator.h,
	addressbook/backend/ebook/e-card-list-iterator.c,
	addressbook/backend/ebook/e-card-list.c,
	addressbook/backend/ebook/e-card-list.h,
	addressbook/backend/ebook/e-card.c,