@@ -1,3 +1,14 @@
+2000-04-07  Matt Loper  <matt@helixcode.com>
+
+	* addressbook/demo/addressbook.c (control_activate_cb): New
+	function. Called when the control is (de)activated.
+	(control_activate): New function; called when the control is
+	activated, and sets up toolbar/menu times.
+	(control_deactivate): New function; removes those toolbar/menu
+	items.
+	(do_nothing_cb): Does nothing :-)
+	(addressbook_factory): Hook up to control_activate_cb().
+
 2000-04-07  Chris Toshok  <toshok@laptoph.xtoph.org>
 
 	* addressbook/backend/pas/pas-backend-file.c
